--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "nodemon": "nodemon express/index.js"
   },
   "dependencies": {
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-awesome-swiper": "^3.1.3"
+    "nodemon": "^1.18.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -75,7 +76,17 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
-    "element-ui": "^2.4.11"
+    "element-ui": "^2.4.11",
+    "vue-awesome-swiper": "^3.1.3",
+    "express": "^4.16.4",
+    "body-parser": "^1.18.3",
+    "vue-resource": "^1.5.1",
+    "axios": "^0.18.0",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.3.14",
+    "formidable": "^1.2.1",
+    "vuex": "^3.0.1",
+    "async-es": "^2.6.1"
   },
   "engines": {
     "node": ">= 6.0.0",
