--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
-    "lib-flexible": "^0.3.2"
+    "lib-flexible": "^0.3.2",
+    "nodemailer": "^4.7.0"
   },
   "engines": {
     "node": ">= 6.0.0",
