--- a/package.json
+++ b/package.json
@@ -87,8 +87,9 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
-    "lib-flexible": "^0.3.2",
-    "nodemailer": "^4.7.0"
+    "nodemailer": "^4.7.0",
+    "vue-amap": "^0.5.8",
+    "vue-baidu-map": "^0.21.14"
   },
   "engines": {
     "node": ">= 6.0.0",
